# weather-cli

./: Cargo.toml  Dockerfile  README.md  weather_cli_ss.webm
src/: input.rs  main.rs  spinner.rs
